Criado arquivo css

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
     <main>
         <section id="home">
             <div class="texto-home">
-                <h1>Seja bem vindo!</h1><br>
-                <p><Span>Olá!</Span> Sou um desenvolvedor front-end 
+                <h1>Seja bem vindo!</h1>
+                <p><span>Olá!</span> Sou um desenvolvedor front-end 
                 que gosta do que faz, criando interfaces 
                 e sempre aprendendo mais. Meu foco é entregar 
                 experiências digitais.</p>
@@ -37,7 +37,7 @@
         </section>
         <section id="sobre">
             <div class="texto-sobre">
-                <h1>Quem eu sou?</h1><br>
+                <h1>Quem eu sou?</h1>
                 <p>Olá, meu nome é Samuel Eduardo, 
                     tenho 19 anos e estou cursando Sistemas de 
                     Informação. Como estudante apaixonado por 
